Fixed the replay game button
Now whenever a new game is about to begin the board-container is wiped clean to hold a new clean board

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   <div class="main-game hidden">
     <div class="board-container">
     </div>
+    <div class="result-screen-container">
+      <h2 class="congratulatory-message"></h2>
+      <button class="play-again-button">Play Again</button>
+    </div>
   </div>
   <footer>
     <p>Copyright ©</p>
