--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <button class="player-two-confirm-button">Confirm</button>
     </div>
   </div>
+  <div class="player-name-vs-computer-container hidden">
+    <label for="player-one-vs-computer">Player One:</label>
+    <input type="text" id="player-one-vs-computer" name="player-one-vs-computer">
+    <button class="player-one-vs-computer-confirm-button">Confirm</button>
+  </div>
   <div class="main-game hidden">
     <div class="board-container">
     </div>
