Added players[0] as the default activePlayer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
   </div>
   <div class="player-name-vs-computer-container hidden">
+    <h2>Who is playing?</h2>
     <label for="player-one-vs-computer">Player One:</label>
     <input type="text" id="player-one-vs-computer" name="player-one-vs-computer">
     <button class="player-one-vs-computer-confirm-button">Confirm</button>
