--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <button class="play-game-button">PLAY GAME</button>
   </div>
   <div class="game-mode-container hidden" >
-    <h2>Please select the game mode</h2>
-    <button class="vs-player">VS Player</button>
-    <button class="vs-computer">VS Computer</button>
+    <h2>SELECT GAME MODE</h2>
+    <div class="game-mode-buttons-container">
+      <button class="vs-player">Vs PLAYER</button>
+      <button class="vs-computer">Vs COMPUTER</button>
+    </div>
   </div>
   <div class="player-names-container hidden">
     <h2>Who is playing?</h2>
