Added a rematch button to quickly play another game

--- a/index.html
+++ b/index.html
@@ -21,23 +21,25 @@
     </div>
   </div>
   <div class="player-names-container hidden">
-    <h2>Who is playing?</h2>
-    <div class="player-one-container">
-      <label for="player-one">Player One:</label>
-      <input type="text" id="player-one" name="player-one">
-      <button class="player-one-confirm-button">Confirm</button>
-    </div>
-    <div class="player-two-container">
-      <label for="player-two">Player Two:</label>
-      <input type="text" id="player-two" name="player-two">
-      <button class="player-two-confirm-button">Confirm</button>
+    <h2>WHO IS PLAYING?</h2>
+    <div class="players-container">
+      <div class="player-one-container">
+        <label for="player-one">PLAYER ONE:</label>
+        <input type="text" id="player-one" name="player-one">
+        <button class="player-one-confirm-button">CONFIRM</button>
+      </div>
+      <div class="player-two-container">
+        <label for="player-two">PLAYER TWO:</label>
+        <input type="text" id="player-two" name="player-two">
+        <button class="player-two-confirm-button">CONFIRM</button>
+      </div>
     </div>
   </div>
   <div class="player-name-vs-computer-container hidden">
     <h2>Who is playing?</h2>
-    <label for="player-one-vs-computer">Player One:</label>
+    <label for="player-one-vs-computer">PLAYER ONE:</label>
     <input type="text" id="player-one-vs-computer" name="player-one-vs-computer">
-    <button class="player-one-vs-computer-confirm-button">Confirm</button>
+    <button class="player-one-vs-computer-confirm-button">CONFIRM</button>
   </div>
   <div class="main-game hidden">
     <div class="game-information-container">
@@ -46,7 +48,10 @@
     </div>
     <div class="board-container">
     </div>
-    <button class="play-again-button hidden">Play Again</button>
+    <div class="next-game-buttons-container hidden">
+      <button class="rematch-button">REMATCH</button>
+      <button class="new-game-button">NEW GAME</button>
+    </div>
   </div>
   <footer>
     <p>Copyright ©</p>
